--- a/spring-sample/exmybatis/pom.xml
+++ b/spring-sample/exmybatis/pom.xml
@@ -14,6 +14,7 @@
       <java-version>1.8</java-version>
       <spring.version>4.3.4.RELEASE</spring.version>
       <org.slf4j-version>1.6.6</org.slf4j-version>
+      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
   <dependencies>
