--- a/java-sample/ExAsyncRestTemplate/pom.xml
+++ b/java-sample/ExAsyncRestTemplate/pom.xml
@@ -77,12 +77,18 @@
       <artifactId>jackson-core</artifactId>
       <version>${jackson.version}</version>
     </dependency>
+
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-annotations</artifactId>
       <version>${jackson.version}</version>
     </dependency>
 
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>${jackson.version}</version>
+    </dependency>
 
     <!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
     <dependency>
