--- a/java-sample/ExXodusDb/pom.xml
+++ b/java-sample/ExXodusDb/pom.xml
@@ -13,6 +13,8 @@
   <properties>
     <slf4j.version>1.8.0-alpha1</slf4j.version>
     <xodus.version>1.0.6</xodus.version>
+    <spring.batch.version>3.0.7.RELEASE</spring.batch.version>
+    <spring.framework.version>4.3.9.RELEASE</spring.framework.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
@@ -89,6 +91,39 @@
       <version>2.5</version>
     </dependency>
 
+
+    <!-- https://mvnrepository.com/artifact/org.springframework.batch/spring-batch-core -->
+    <dependency>
+      <groupId>org.springframework.batch</groupId>
+      <artifactId>spring-batch-core</artifactId>
+      <version>${spring.batch.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-aop</artifactId>
+      <version>${spring.framework.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-tx</artifactId>
+      <version>${spring.framework.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-core</artifactId>
+      <version>${spring.framework.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-beans</artifactId>
+      <version>${spring.framework.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-context</artifactId>
+      <version>${spring.framework.version}</version>
+    </dependency>
 
     <dependency>
       <groupId>junit</groupId>
