--- a/java-sample/ExXodusDb/src/main/resources/log4j.properties
+++ b/java-sample/ExXodusDb/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 # Root logger option (DEBUG, INFO, WARN, ERROR, FATAL)
-log4j.rootLogger=INFO, stdout, file, file2 
+log4j.rootLogger=DEBUG, stdout, file, file2 
 
 # Redirect log messages to console
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender 
