--- a/java-sample/ExChronicleMap/src/main/resources/log4j.properties
+++ b/java-sample/ExChronicleMap/src/main/resources/log4j.properties
@@ -11,7 +11,7 @@ log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss.SSS} %-5p 
 log4j.appender.file=org.apache.log4j.RollingFileAppender 
 
 # file log
-log4j.appender.file.File=exxodusdb.log 
+log4j.appender.file.File=exchroniclemap.log 
 log4j.appender.file.MaxFileSize=5MB 
 log4j.appender.file.MaxBackupIndex=10 
 log4j.appender.file.layout=org.apache.log4j.PatternLayout 
@@ -19,7 +19,7 @@ log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss.SSS} %-5p %c
 log4j.appender.file2=org.apache.log4j.RollingFileAppender 
 
 # file2 log
-log4j.appender.file2.File=exxodusdb2.log 
+log4j.appender.file2.File=exchroniclemap2.log 
 log4j.appender.file2.MaxFileSize=5MB 
 log4j.appender.file2.MaxBackupIndex=10 
 log4j.appender.file2.layout=org.apache.log4j.PatternLayout 
