--- a/java-sample/ExXodusDb/pom.xml
+++ b/java-sample/ExXodusDb/pom.xml
@@ -126,6 +126,12 @@
     </dependency>
 
     <dependency>
+      <groupId>net.openhft</groupId>
+      <artifactId>chronicle-map</artifactId>
+      <version>3.14.2</version>
+    </dependency>
+
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.12</version>
