--- a/java-sample/ExVertX/pom.xml
+++ b/java-sample/ExVertX/pom.xml
@@ -61,6 +61,13 @@
       <version>3.5.0</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/commons-lang/commons-lang -->
+    <dependency>
+      <groupId>commons-lang</groupId>
+      <artifactId>commons-lang</artifactId>
+      <version>2.6</version>
+    </dependency>
+
 
     <dependency>
       <groupId>junit</groupId>
