--- a/java-sample/ExVertX/pom.xml
+++ b/java-sample/ExVertX/pom.xml
@@ -61,6 +61,14 @@
       <version>3.5.0</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/io.vertx/vertx-web -->
+    <dependency>
+      <groupId>io.vertx</groupId>
+      <artifactId>vertx-web</artifactId>
+      <version>3.5.0</version>
+    </dependency>
+
+
     <!-- https://mvnrepository.com/artifact/commons-lang/commons-lang -->
     <dependency>
       <groupId>commons-lang</groupId>
