--- a/java-sample/ExFatJar/pom.xml
+++ b/java-sample/ExFatJar/pom.xml
@@ -2,12 +2,12 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.exvertx</groupId>
-  <artifactId>ExVertX</artifactId>
+  <groupId>com.exfatjar</groupId>
+  <artifactId>ExFatJar</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>ExVertX</name>
+  <name>ExFatJar</name>
   <url>http://maven.apache.org</url>
 
   <properties>
@@ -54,26 +54,11 @@
       <version>2.7</version>
     </dependency>
 
-    <!-- https://mvnrepository.com/artifact/io.vertx/vertx-core -->
+    <!-- https://mvnrepository.com/artifact/joda-time/joda-time -->
     <dependency>
-      <groupId>io.vertx</groupId>
-      <artifactId>vertx-core</artifactId>
-      <version>3.5.0</version>
-    </dependency>
-
-    <!-- https://mvnrepository.com/artifact/io.vertx/vertx-web -->
-    <dependency>
-      <groupId>io.vertx</groupId>
-      <artifactId>vertx-web</artifactId>
-      <version>3.5.0</version>
-    </dependency>
-
-
-    <!-- https://mvnrepository.com/artifact/commons-lang/commons-lang -->
-    <dependency>
-      <groupId>commons-lang</groupId>
-      <artifactId>commons-lang</artifactId>
-      <version>2.6</version>
+      <groupId>joda-time</groupId>
+      <artifactId>joda-time</artifactId>
+      <version>2.9.9</version>
     </dependency>
 
 
@@ -86,7 +71,7 @@
   </dependencies>
 
   <build>
-    <finalName>ExVertX</finalName>
+    <finalName>ExFatJar</finalName>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -96,7 +81,6 @@
           <target>1.8</target>
         </configuration>
       </plugin>
-
       <!-- Maven Assembly Plugin -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -110,7 +94,7 @@
           <!-- MainClass in mainfest make a executable jar -->
           <archive>
             <manifest>
-              <mainClass>com.exvertx.HttpServerSample</mainClass>
+              <mainClass>com.exfatjar.App</mainClass>
             </manifest>
           </archive>
 
@@ -126,6 +110,7 @@
           </execution>
         </executions>
       </plugin>
+
     </plugins>
   </build>
 </project>
