--- a/java-sample/ExFatJar/src/main/resources/log4j.properties
+++ b/java-sample/ExFatJar/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 # Root logger option (DEBUG, INFO, WARN, ERROR, FATAL)
-log4j.rootLogger=INFO, stdout, file, file2 
+log4j.rootLogger=INFO, stdout, file, file2, asyncfile
 
 # Redirect log messages to console
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender 
@@ -22,5 +22,13 @@ log4j.appender.file2=org.apache.log4j.RollingFileAppender
 log4j.appender.file2.File=exfatjar2.log 
 log4j.appender.file2.MaxFileSize=5MB 
 log4j.appender.file2.MaxBackupIndex=10 
+log4j.appender.file2.immediateFlush=false
 log4j.appender.file2.layout=org.apache.log4j.PatternLayout 
 log4j.appender.file2.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss.SSS} %-5p %c{1}:%L - %m%n
+
+
+# asyncfile log
+log4j.appender.asyncfile.layout=org.apache.log4j.PatternLayout 
+log4j.appender.asyncfile.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss.SSS} %-5p %c{1}:%L - %m%n
+log4j.appender.asyncfile=org.apache.log4j.AsyncAppender
+log4j.appender.asyncfile.BufferSize=8192
