--- a/java-sample/ExBerkeleyDb/pom.xml
+++ b/java-sample/ExBerkeleyDb/pom.xml
@@ -65,6 +65,14 @@
       <version>3.5</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.5</version>
+    </dependency>
+
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
