--- a/java-sample/ExRocksDb/pom.xml
+++ b/java-sample/ExRocksDb/pom.xml
@@ -82,12 +82,21 @@
       <version>${xodus.version}</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/org.rocksdb/rocksdbjni -->
+    <dependency>
+      <groupId>org.rocksdb</groupId>
+      <artifactId>rocksdbjni</artifactId>
+      <version>5.8.6</version>
+    </dependency>
+
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>3.8.1</version>
+      <version>4.12</version>
       <scope>test</scope>
     </dependency>
+
   </dependencies>
   
   <build>
