--- a/java-sample/ExRocksDb/pom.xml
+++ b/java-sample/ExRocksDb/pom.xml
@@ -82,11 +82,33 @@
       <version>${xodus.version}</version>
     </dependency>
 
+
+    <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.6</version>
+    </dependency>
+
     <!-- https://mvnrepository.com/artifact/org.rocksdb/rocksdbjni -->
     <dependency>
       <groupId>org.rocksdb</groupId>
       <artifactId>rocksdbjni</artifactId>
-      <version>5.8.6</version>
+      <version>5.5.1</version>
+    </dependency>
+
+    <!-- https://mvnrepository.com/artifact/org.xerial.snappy/snappy-java -->
+    <dependency>
+      <groupId>org.xerial.snappy</groupId>
+      <artifactId>snappy-java</artifactId>
+      <version>1.1.2.6</version>
+    </dependency>
+
+    <!-- https://mvnrepository.com/artifact/net.jpountz.lz4/lz4 -->
+    <dependency>
+      <groupId>net.jpountz.lz4</groupId>
+      <artifactId>lz4</artifactId>
+      <version>1.3.0</version>
     </dependency>
 
 
