--- a/spring-sample/ExRedis/pom.xml
+++ b/spring-sample/ExRedis/pom.xml
@@ -123,6 +123,17 @@
       <artifactId>servlet-api</artifactId>
       <version>2.3</version>
     </dependency>
+
+    <!-- https://mvnrepository.com/artifact/org.hamcrest/hamcrest-all -->
+    <dependency>
+      <groupId>org.hamcrest</groupId>
+      <artifactId>hamcrest-all</artifactId>
+      <version>1.3</version>
+      <scope>test</scope>
+    </dependency>
+
+
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
