--- a/spring-sample/ExRedis/pom.xml
+++ b/spring-sample/ExRedis/pom.xml
@@ -93,6 +93,13 @@
       <version>${spring.version}</version>
     </dependency>
 
+
+    <dependency>
+      <groupId>org.springframework.data</groupId>
+      <artifactId>spring-data-redis</artifactId>
+      <version>1.4.1.RELEASE</version>
+    </dependency>
+
     <!-- Logging -->
     <dependency>
       <groupId>org.slf4j</groupId>
@@ -132,6 +139,12 @@
       <scope>test</scope>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/com.github.kstyrc/embedded-redis -->
+    <dependency>
+      <groupId>com.github.kstyrc</groupId>
+      <artifactId>embedded-redis</artifactId>
+      <version>0.6</version>
+    </dependency>
 
 
     <dependency>
