--- a/maven-sample/app/src/main/resources/log4j.properties
+++ b/maven-sample/app/src/main/resources/log4j.properties
@@ -1,21 +1,26 @@
-# Root logger option
-log4j.rootLogger=ERROR, stdout
+# Root logger option (DEBUG, INFO, WARN, ERROR, FATAL)
+log4j.rootLogger=INFO, stdout, file, file2 
 
 # Redirect log messages to console
-log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-log4j.appender.stdout.Target=System.out
-log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
+log4j.appender.stdout=org.apache.log4j.ConsoleAppender 
+log4j.appender.stdout.Target=System.out 
+log4j.appender.stdout.layout=org.apache.log4j.PatternLayout 
+log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss.SSS} %-5p %c{1}:%L - %m%n 
 
 # Redirect log messages to a log file
-log4j.appender.file=org.apache.log4j.RollingFileAppender
+log4j.appender.file=org.apache.log4j.RollingFileAppender 
 
-# outputs to Tomcat home
-log4j.appender.file.File=sample.log
-log4j.appender.file.MaxFileSize=5MB
-log4j.appender.file.MaxBackupIndex=10
-log4j.appender.file.layout=org.apache.log4j.PatternLayout
-log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
+# file log
+log4j.appender.file.File=exjunit4.log 
+log4j.appender.file.MaxFileSize=5MB 
+log4j.appender.file.MaxBackupIndex=10 
+log4j.appender.file.layout=org.apache.log4j.PatternLayout 
+log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss.SSS} %-5p %c{1}:%L - %m%n
+log4j.appender.file2=org.apache.log4j.RollingFileAppender 
 
-
-
+# file2 log
+log4j.appender.file2.File=exjunit42.log 
+log4j.appender.file2.MaxFileSize=5MB 
+log4j.appender.file2.MaxBackupIndex=10 
+log4j.appender.file2.layout=org.apache.log4j.PatternLayout 
+log4j.appender.file2.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss.SSS} %-5p %c{1}:%L - %m%n
