--- a/java-sample/ExKafka/src/main/resources/log4j.properties
+++ b/java-sample/ExKafka/src/main/resources/log4j.properties
@@ -1,6 +1,6 @@
 # Root logger option (DEBUG, INFO, WARN, ERROR, FATAL)
 #log4j.rootLogger=INFO, stdout, file, file2
-log4j.rootLogger=INFO, stdout, file
+log4j.rootLogger=WARN, stdout, file
 
 
 # Redirect log messages to console
