--- a/java-sample/ExKafka/src/main/resources/log4j.properties
+++ b/java-sample/ExKafka/src/main/resources/log4j.properties
@@ -1,7 +1,6 @@
 # Root logger option (DEBUG, INFO, WARN, ERROR, FATAL)
 #log4j.rootLogger=INFO, stdout, file, file2
-log4j.rootLogger=WARN, stdout, file
-
+log4j.rootLogger=INFO, stdout, file
 
 # Redirect log messages to console
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender 
@@ -19,10 +18,3 @@ log4j.appender.file.MaxBackupIndex=10
 log4j.appender.file.layout=org.apache.log4j.PatternLayout 
 log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss.SSS} %-5p %c{1}:%L - %m%n
 log4j.appender.file2=org.apache.log4j.RollingFileAppender 
-
-# file2 log
-log4j.appender.file2.File=exkafka2.log 
-log4j.appender.file2.MaxFileSize=5MB 
-log4j.appender.file2.MaxBackupIndex=10 
-log4j.appender.file2.layout=org.apache.log4j.PatternLayout 
-log4j.appender.file2.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss.SSS} %-5p %c{1}:%L - %m%n
