--- a/elastic-sample/EsQuery6/src/main/resources/MappingTest.json
+++ b/elastic-sample/EsQuery6/src/main/resources/MappingTest.json
@@ -13,7 +13,7 @@
                 "type" : "text",
                 "index" : true
             },
-            "product" : {
+            "products" : {
                 "type" : "nested",
                 "properties" : {
                     "label" : {"type" : "text", "index" : true},
