--- a/spring-sample/exbatch/src/main/resources/config.properties
+++ b/spring-sample/exbatch/src/main/resources/config.properties
@@ -1,3 +1,4 @@
-mybatis.url="jdbc:mysql://127.0.0.1:3306/test?useUnicode=true&amp;characterEncoding=utf8"
-mybatis.username="root"
-
+db.url=jdbc:mysql://127.0.0.1:3306/db_test?useUnicode=true&characterEncoding=UTF-8
+db.username=root
+db.password=1111
+db.driver.class=com.mysql.jdbc.Driver
