--- a/spring-sample/ExJSP/pom.xml
+++ b/spring-sample/ExJSP/pom.xml
@@ -12,8 +12,8 @@
     <java-version>1.8</java-version>
     <spring.version>4.3.4.RELEASE</spring.version>
     <org.slf4j-version>1.6.6</org.slf4j-version>
+    <maven.test.skip>true</maven.test.skip>
   </properties>
-
 
   <dependencies>
     <dependency>
