--- a/java-sample/ExDeepLearning4J/pom.xml
+++ b/java-sample/ExDeepLearning4J/pom.xml
@@ -13,6 +13,7 @@
   <properties>
     <slf4j.version>1.8.0-alpha1</slf4j.version>
     <dl4j.version>0.9.1</dl4j.version>
+    <nd4j.version>0.9.1</nd4j.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
@@ -77,6 +78,19 @@
       <version>${dl4j.version}</version>
     </dependency>
 
+    <!-- N-Dimensional Arrays for Java -->
+    <dependency>
+      <groupId>org.nd4j</groupId>
+      <artifactId>nd4j-native-platform</artifactId>
+      <version>${nd4j.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.nd4j</groupId>
+      <artifactId>nd4j-native</artifactId>
+      <version>${nd4j.version}</version>
+      <classifier>windows-x86_64-avx2</classifier>
+    </dependency>
 
     <dependency>
       <groupId>junit</groupId>
